Shading/Normals break on array modifier caps #94422

Closed
opened 2021-12-27 22:53:43 +01:00 by Andrew · 6 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: Intel(R) UHD Graphics 620 Intel 4.5.0 - Build 27.20.100.9171

Blender Version
Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: f1cca30557
Worked: Blender 2.69

Short description of error
When using the Array modifier with object offset turned on and with an end cap selected (end cap is more obvious than start cap), the end cap mesh shading/normals will break or misalign if smooth shading is on. This only occurs if the object set as the offset is rotated.

Working Fix
If you turn on merging in the array modifier, it will fix the issue even when the distance is set to zero.

Exact steps for others to reproduce the error

  1. Open Blender, Create any primitive mesh to be arrayed or use the default cube.
  2. Create any primitive mesh to be the end cap, set the shading to be smooth.
  3. Create an empty to be the object offset.
  4. Add an array modifier to the mesh to be arrayed.
  5. Turn on object offset in the array modifier, select the empty to be the object offset.
  6. For the end cap, select the mesh created to be the end cap.
  7. Select and rotate the empty, the shading on the end cap will break (this applies to viewport, cycles and eevee).

I've included a simple blend file to demonstrate.array_end_cap_shading_error.blend

**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: Intel(R) UHD Graphics 620 Intel 4.5.0 - Build 27.20.100.9171 **Blender Version** Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: `f1cca30557` Worked: Blender 2.69 **Short description of error** When using the Array modifier with object offset turned on and with an end cap selected (end cap is more obvious than start cap), the end cap mesh shading/normals will break or misalign if smooth shading is on. This only occurs if the object set as the offset is rotated. **Working Fix** If you turn on merging in the array modifier, it will fix the issue even when the distance is set to zero. **Exact steps for others to reproduce the error** 1. Open Blender, Create any primitive mesh to be arrayed or use the default cube. 2. Create any primitive mesh to be the end cap, set the shading to be smooth. 3. Create an empty to be the object offset. 4. Add an array modifier to the mesh to be arrayed. 5. Turn on object offset in the array modifier, select the empty to be the object offset. 6. For the end cap, select the mesh created to be the end cap. 7. Select and rotate the empty, the shading on the end cap will break (this applies to viewport, cycles and eevee). I've included a simple blend file to demonstrate.[array_end_cap_shading_error.blend](https://archive.blender.org/developer/F12778434/array_end_cap_shading_error.blend)

Added subscriber: @JollyFigNut

Added subscriber: @JollyFigNut

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2021-12-28 16:52:42 +01:00

This issue was referenced by dd9f4e1b81

This issue was referenced by dd9f4e1b81b1bb67c2322ca16b7fe34c7f70c974

This issue was referenced by dfdc7c3f81

This issue was referenced by dfdc7c3f8107ac98074f3c78036618ee56424d95

This issue was referenced by 4bf74afacc

This issue was referenced by 4bf74afacc1d1d6c975130aeb39f532de40ed603

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94422
There is no content yet.